@@ -141,6 +141,7 @@ All (GUI):
 - Add wxJoystickEvent::GetButtonOrdinal() (Mick Phillips).
 - Add wxGraphicsContext::GetWindow() and implement wxGraphicsContext::GetDPI().
 - Add wxToolbook::EnablePage() (Stefan Ziegler).
+- Adapt AUI colours to system colour changes (Daniel Kulp).
 
 wxGTK:
 
